fixed journal gap

--- a/app/assets/stylesheets/teachers/_classroom_detail.scss
+++ b/app/assets/stylesheets/teachers/_classroom_detail.scss
@@ -1,10 +1,10 @@
-.container {
+.classrom-container {
   justify-content: center;
   max-height: 100%;
   min-width: 100%;
 }
 
-.container-body {
+.classroom-container-body {
   display: flex;
   justify-content: center;
   max-height: 100vh;
